# IBM-DS-SPACEX-FALCON9

./: .gitignore  my_data1.db  part1-data-collection-with-api.ipynb  part1-data-collection-with-webscraping.ipynb  part2-data-wrangling.ipynb  part3-eda-dataviz.ipynb  part3-eda-sql.ipynb  part4-interactive-visual-analytics-with-folium.ipynb  part5-machine-learning-prediction.ipynb  pyproject.toml  spacex_dash_app.py
