[tool.poetry]
name = "ibm ds"
version = "0.1.0"
description = ""
authors = ["eoamegassi <eliseeamegassi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.2"
numpy = "^2.1.0"
scikit-learn = "^1.5.1"
beautifulsoup4 = "^4.12.3"
sqlalchemy = "^2.0.32"
ipython-sql = "^0.5.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
folium = "^0.17.0"
wget = "^3.2"
dash = "^2.17.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
